# internal/handlers/requests/auth.go
@@ -1,0 +1,7 @@
+package requests
+
+// @Description Register request
+type RegisterRequest struct {
+	Email    string `extensions:"x-order=0" validate:"required" json:"email" example:"fisenkomaksim.id@gmail.com"`
+	Password string `extensions:"x-order=1" validate:"required" json:"password" example:"11111111"`
+}
