# internal/handlers/responses/error.go
@@ -1,0 +1,6 @@
+package responses
+
+// @Description Error response
+type ErrorResponse struct {
+	Error string `json:"error" validate:"required" example:"error message"`
+}
