# internal/repo/entities/auth.go
@@ -1,0 +1,15 @@
+package entities
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type User struct {
+	Id        uuid.UUID `gorm:"primaryKey"`
+	Email     string
+	Password  string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
