# internal/services/dto/auth.go
@@ -1,0 +1,15 @@
+package dto
+
+import (
+	"time"
+
+	"github.com/google/uuid"
+)
+
+type UserDTO struct {
+	Id        uuid.UUID
+	Email     string
+	Password  string
+	CreatedAt time.Time
+	UpdatedAt time.Time
+}
